[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/LoveableActions/ActionsList.gd" type="Script" id=1]

[node name="ActionsList" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_tab_name": "All Actions"
}

[node name="ListOptions" type="HBoxContainer" parent="."]
margin_right = 1272.0
margin_bottom = 20.0

[node name="NewButton" type="Button" parent="ListOptions"]
margin_right = 12.0
margin_bottom = 20.0

[node name="ItemList" type="ItemList" parent="."]
margin_top = 24.0
margin_right = 1272.0
margin_bottom = 684.0
size_flags_vertical = 3

[connection signal="pressed" from="ListOptions/NewButton" to="." method="_on_NewButton_pressed"]
